--- a/style.css
+++ b/style.css
@@ -28,3 +28,9 @@ body,html{
     font-weight: 600;
     font-style: normal;
   }
+  .pacifico-regular {
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
