pre page separation

--- a/style.css
+++ b/style.css
@@ -204,3 +204,46 @@ body,html{
       margin-left: 0;
     }
   }
+
+  .carousella {
+    box-shadow: 0px 0px 25px 1px #0f1d41;
+  }
+  button.a {
+    font-size: 18px;
+    color: #0f3086;
+    font-family: inherit;
+    font-weight: 800;
+    cursor: pointer;
+    position: relative;
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition-duration: 400ms;
+    transition-property: color;
+  }
+  
+  button.a:focus,
+  button.a:hover {
+    color: #0f1d41;
+  }
+  
+  button.a:focus:after,
+  button.a:hover:after {
+    width: 100%;
+    left: 0%;
+  }
+  
+  button.a:after {
+    content: "";
+    pointer-events: none;
+    bottom: -2px;
+    left: 50%;
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    background-color: #0f1d41;
+    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition-duration: 400ms;
+    transition-property: width, left;
+  }
