--- a/style.css
+++ b/style.css
@@ -247,3 +247,47 @@ body,html{
     transition-duration: 400ms;
     transition-property: width, left;
   }
+
+  /*Cards code*/
+ .cardEffect {
+  border: 2px solid white;
+  border-radius: 5%;
+  transition: ease-in .1s;
+ }
+ .cardEffect:hover {
+  box-shadow: 0px 0px 25px 1px #0f1d41;
+  filter: brightness(1);
+}
+.hover-text {
+  color: rgb(255, 255, 255);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: ease-in-out 0.001s;
+  font-size: calc(2rem + 0.4vw);
+  text-shadow: 2px 2px 5px #0f1d41;
+}
+
+/* Show the text when hovering over the container */
+.cardEffect:hover .hover-text {
+  opacity: 1;
+}
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 ratio */
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  background: #0f1d41;
+  border: 5px solid #0f1d41;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
